# kursovaya_finel

./: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  habits_fixture.json  main.py  nginx.conf  pyproject.toml  requirements.txt  run_migrations.py  users_fixture.json
.github/workflows/: ci.yml
alembic/: env.py
config/: asgi.py  celery.py  settings.py  urls.py
dependencies/: database.py  fastapi_users_instance.py
habit/: admin.py
habit/migrations/: 0001_initial.py
habits/: admin.py  apps.py  models.py  paginators.py  permissions.py  serializers.py  serliazers.py  tasks.py  tests.py  urls.py  utils.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
nginx/: Dockerfile
products/: models.py  schemas.py  view.py
telegram_bot/: apps.py  urls.py  views.py
users/: admin.py  auth.py  csu.py  forms.py  models.py  routers.py  schemas.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_telegram_chat_id.py
